# study-gRPC

./: .gitignore  CMakeLists.txt  README.md  async_callback_client.cc  async_callback_server.cc  async_client.cc  async_client2.cc  async_server.cc  callback_client.cc  callback_server.cc  create_file.py  jpeg_client.cc  jpeg_server.cc  main.cc  media_handler.cc  media_handler.h  remote_client.cc  remote_server.cc
debug/: CMakeCache.txt
include/: image_handler.h  media_handler.h  video_handler.h  video_maker.h  yolov4.h
lib/: yolov4.cc
practice/: main  main.cc  mat.proto
protos/: jpeg.proto  remote_message.proto
src/: image_handler.cc  media_handler.cc  video_handler.cc  video_maker.cc  yolov4.cc
test/: main.cpp  my_message.proto
